Add commont UI Widget

--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -44,8 +44,8 @@
     <style name="ViewGroup">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/white</item>
-        <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:background">@drawable/view_group_with_shadow</item>
+        <item name="android:layout_marginBottom">10dp</item>
     </style>
 
     <style name="ViewGroup.Fill" parent="ViewGroup">
