--- a/src/main/res/layout/simple_list_item.xml
+++ b/src/main/res/layout/simple_list_item.xml
@@ -8,7 +8,7 @@
         android:layout_height="60dp"
         android:layout_marginLeft="18dp"
         android:gravity="center_vertical"
-        android:textSize="20sp" />
+        android:textSize="@dimen/font_size_normal" />
 
 </FrameLayout>
 
