--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="font_size_small">16sp</dimen>
     <dimen name="font_size_normal">20sp</dimen>
     <dimen name="font_size_big">26sp</dimen>
     <dimen name="font_size_super">32sp</dimen>
