--- a/src/main/res/layout/simple_list_item.xml
+++ b/src/main/res/layout/simple_list_item.xml
@@ -6,7 +6,8 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginLeft="18dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginEnd="18dp"
         android:gravity="center_vertical"
         android:textSize="@dimen/font_size_normal" />
 
